--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,30 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+     
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: mypassword
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
+    steps:
     - name: Set up Go 1.x
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
       id: go
+
+    - uses: actions/checkout@v3
+    - name: Run Migrations
+      run : make migrateup
 
     - name: Test
       run: make test
